namespaces/live.cloud-platform.service.justice.gov.uk/laa-get-payments-finance-data-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-get-payments-finance-data-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-get-payments-finance-data"
    cloud-platform.justice.gov.uk/application: "Get payments and finance data"
    cloud-platform.justice.gov.uk/owner: "Get payments and finance data: GLAD@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/payforlegalaid"
    cloud-platform.justice.gov.uk/team-name: "payforlegalaid"
    cloud-platform.justice.gov.uk/review-after: ""
